# blackboard

./: CMakeLists.txt  package.xml
include/blackboard/: blackboard.h  buffer.h  key.h  new_buffer.h  serializer.h  update.h  variant.h
msg/: KeyUpdate.msg  ValueUpdate.msg  ValueUpdates.msg
src/: blackboard.cpp
test/: test.bash  test_blackboard.cpp  test_new_buffer.cpp
